<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp">

<LinearLayout android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
    <Spinner android:id="@+id/from"
             android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
    <TextView android:text="@string/transfer_label"
              android:textSize="18sp"
              android:paddingBottom="1dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:gravity="center_horizontal|center_vertical"
              android:layout_gravity="center_horizontal|center_vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <Spinner android:id="@+id/to"
             android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
</LinearLayout>

<com.notriddle.budget.EditTextDefaultFocus
    android:id="@+id/description"
    android:hint="@string/description_hint"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text|textCapWords|textAutoCorrect"
    android:singleLine="true"
    android:nextFocusDown="@id/amount"
    android:nextFocusForward="@id/amount"
/>

<com.notriddle.budget.EditMoney
    android:id="@+id/amount"
    android:hint="@string/amount_hint"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:imeActionLabel="@android:string/ok"
    android:imeActionId="42"
    android:textStyle="bold"
/>

</LinearLayout>
